package com.paxtech.utime.platform.reviews.domain.model.queries;

public record GetAllReviewsQuery() {
}
