package com.paxtech.utime.platform.services.domain.model.valueobjects;

public record ProviderId(Long providerId) {

}
